# DD_in_QKRR_code

./: QKRR.py  QKRR_mnist_3qubits_HEA.ipynb  QKRR_mnist_3qubits_TPA.ipynb  QKRR_synthetic_3qubits_HEA.ipynb  QKRR_synthetic_3qubits_TPA.ipynb  QKRR_synthetic_5qubits_HEA.ipynb  QKRR_synthetic_5qubits_TPA.ipynb  README.md  pyproject.toml
results/: QKRR_mnist_3qubits_HEA_numerical.pkl  QKRR_mnist_3qubits_HEA_theoretical.pkl  QKRR_mnist_3qubits_TPA_numerical.pkl  QKRR_mnist_3qubits_TPA_theoretical.pkl  QKRR_synthetic_3qubits_HEA_numerical.pkl  QKRR_synthetic_3qubits_HEA_theoretical.pkl  QKRR_synthetic_3qubits_TPA_numerical.pkl  QKRR_synthetic_3qubits_TPA_theoretical.pkl  QKRR_synthetic_5qubits_HEA_numerical.pkl  QKRR_synthetic_5qubits_HEA_theoretical.pkl  QKRR_synthetic_5qubits_TPA_numerical.pkl  QKRR_synthetic_5qubits_TPA_theoretical.pkl
